--- a/spooky-i3/compton.conf
+++ b/spooky-i3/compton.conf
@@ -14,4 +14,4 @@ inactive-opacity = 1.0;
 mark-wmwin-focused = true;
 fading = false;
 shadow-radius = 12.0;
-backend = "glx";
+backend = "xrender";
