--- a/spooky-i3/config
+++ b/spooky-i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:LiterationMono Nerd Font Book 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -30,16 +30,12 @@ font pango:monospace 8
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec terminator
-
+bindsym $mod+Return exec i3-sensible-terminal
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec rofi -show drun
-bindsym $mod+t exec rofi -show run
-bindsym $mod+Home exec jgmenu_run pmenu
-bindsym $mod+c exec clipmenu
+
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -155,20 +151,27 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
+
 bar {
-        status_command py3status
-        position       top
-        height         25
-        workspace_buttons yes
+    status_command py3status
+    position top
+    height 25
+    workspace_buttons yes
 }
 
-exec /usr/bin/lxpolkit
-exec compton -b
-exec ~/.fehbg
-exec dunst
-exec clipmenud
-exec nm-applet
-exec sh death
+##OTHER POSSIBLE BARS##
+# bar {
+# status_command ~/.bs.sh
+# position top
+# height 25
+# workspace_buttons yes
+# }
+# bar {
+# status_command i3status-rs ~/.i3rs.toml
+# position top
+# height 25
+# workspace_buttons yes
+# }
 bindsym XF86MonBrightnessUp exec light -A 10.00
 bindsym XF86MonBrightnessDown exec light -U 10.00
 bindsym XF86AudioRaiseVolume exec pamixer -i 10
@@ -179,4 +182,22 @@ bindsym XF86AudioPrev  exec playerctl previous
 bindsym XF86AudioNext exec playerctl next
 bindsym $mod+Delete exec oblogout
 for_window [class="Oblogout" instance="oblogout"] floating toggle fullscreen toggle
-bindsym $mod+Insert exec scrot
+bindsym $mod+Insert exec zsh scrotscript
+for_window [class="Qupzilla" instance = "Download Manager"] floating enable
+bindsym $mod+d exec rofi -show drun
+bindsym $mod+t exec rofi -show run
+bindsym $mod+Home exec jgmenu_run pmenu
+bindsym $mod+c exec clipmenu
+for_window [ class="Tilix" ] floating toggle
+bindsym $mod+Shift+t exec tilix 
+exec /usr/bin/lxpolkit  
+exec compton -b 
+exec ~/.fehbg 
+exec /usr/lib/mate-notification-daemon/mate-notification-daemon 
+exec clipmenud 
+exec nm-applet 
+exec /usr/lib/kdeconnectd 
+exec indicator-kdeconnect 
+exec sh death 
+exec light -S 0.00 
+
