--- a/spooky-i3/i3rs.toml
+++ b/spooky-i3/i3rs.toml
@@ -32,11 +32,11 @@ format = "%a %m/%d %R"
 
 [[block]]
 block = "custom"
-command = "echo Brightness:$(light)"
+command = "echo :$(light)"
 on_click = "sh /bl.sh"
 interval = 5
 
 [[block]]
 block = "custom"
-command = "echo Tools"
+command = "echo :Tools"
 on_click = "revenge-tools"
