--- a/spooky-i3/i3rs.toml
+++ b/spooky-i3/i3rs.toml
@@ -4,7 +4,7 @@ icons = "awesome"
 [[block]]
 block = "memory"
 display_type = "memory"
-format_mem = "{Mum}MiB/{MTg}GiB"
+format_mem = "{Mum} MiB/{MTg} GiB"
 
 [[block]]
 block = "custom"
@@ -32,11 +32,11 @@ format = "%a %m/%d %R"
 
 [[block]]
 block = "custom"
-command = "echo :$(light)"
+command = "echo   $(light)"
 on_click = "sh /bl.sh"
 interval = 5
 
 [[block]]
 block = "custom"
-command = "echo :Tools"
+command = "echo   Tools"
 on_click = "revenge-tools"
