Changed scrot custom module to display a font awesome retro camera

--- a/spooky-i3/i3rs.toml
+++ b/spooky-i3/i3rs.toml
@@ -8,8 +8,9 @@ format_mem = "{Mum} MiB/{MTg} GiB"
 
 [[block]]
 block = "custom"
+
 on_click = "scrot -e 'mv $f ~/Pictures'"
-cycle = ["echo scrot"]
+command = "echo " 
 
 [[block]]
 block  = "battery"
