Updated configs(I now have two separate statusbars

--- a/spooky-i3/i3status.conf
+++ b/spooky-i3/i3status.conf
@@ -13,12 +13,15 @@ general {
 
 order += "battery_level"
 order += "clock"
+order += "timer"
 order += "sysdata"
 order += "volume_status"
 order += "mpris"
 order += "screenshot"
 order += "backlight"
 order += "arch_updates"
+order += "kdeconnector"
+order += "wifi"
 
 battery_level {
         battery_id  = all
@@ -27,7 +30,7 @@ battery_level {
 }
 
 clock {
-format = 'Spring Hill {America/New_York} '       
+format = 'Spring Hill {Local} '       
 format_time = '%Y-%m-%d %H:%M'
 }
 
@@ -51,6 +54,13 @@ screenshot_command = "scrot -q 100"
 backlight {
 }
 
+kdeconnector {
+device_id = "4024db3a77a4165a"
+format = "{name} {bat_status} {charge}   "
+}
+
 arch_updates {
 include_aur = True
+}
+wifi {
 }
