--- a/spooky-i3/config
+++ b/spooky-i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:LiterationMono Nerd Font Book 8
+font pango:LiterationMono Nerd Font Book 8.5
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -153,25 +153,20 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 
 bar {
-    status_command i3status-rs ~/.config/i3/i3rs.toml
+    i3bar_command i3bar -t
+    status_command i3status-rs ~/.i3rs.toml
     position top
     height 25
     workspace_buttons yes
 }
 
-##OTHER POSSIBLE BARS##
-# bar {
-# status_command ~/.bs.sh
-# position top
-# height 25
-# workspace_buttons yes
-# }
-# bar {
-# status_command py3status
-# position top
-# height 25
-# workspace_buttons yes
-# }
+bar {
+   i3bar_command i3bar -t
+   status_command sh .bs.sh
+   position bottom
+   height 25
+   workspace_buttons yes
+}
 bindsym XF86MonBrightnessUp exec light -A 10.00
 bindsym XF86MonBrightnessDown exec light -U 10.00
 bindsym XF86AudioRaiseVolume exec pamixer -i 10
@@ -181,6 +176,7 @@ bindsym XF86AudioPlay        exec playerctl play-pause
 bindsym XF86AudioPrev  exec playerctl previous
 bindsym XF86AudioNext exec playerctl next
 bindsym $mod+Delete exec oblogout
+bindsym $mod+n exec terminator -e "nmtui"
 for_window [class="Oblogout" instance="oblogout"] floating toggle fullscreen toggle
 bindsym $mod+Insert exec zsh scrotscript
 for_window [class="Qupzilla" instance = "Download Manager"] floating enable
@@ -193,9 +189,8 @@ bindsym $mod+Shift+t exec tilix
 exec /usr/bin/lxpolkit  
 exec compton -b 
 exec ~/.fehbg 
-exec /usr/lib/mate-notification-daemon/mate-notification-daemon 
+exec dunst 
 exec clipmenud 
-exec nm-applet 
 exec /usr/lib/kdeconnectd 
 exec indicator-kdeconnect 
 exec sh death 
