--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:IBM Plex Mono SemiBold 8.5
+font pango:DejaVuSansMono Nerd Font Bold 8.5
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -170,17 +170,16 @@ bindsym XF86AudioPrev  exec playerctl previous
 bindsym XF86AudioNext exec playerctl next
 bindsym $mod+Delete exec oblogout
 bindsym $mod+n exec terminator -e "nmtui"
-for_window [class="Oblogout" instance="oblogout"] floating toggle fullscreen toggle
+for_window [class="Oblogout" instance="oblogout"] floating toggle
 bindsym $mod+Insert exec scrot;exec rsync *_scrot.png ~/Pictures
 bindsym $mod+d exec rofi -show drun
 bindsym $mod+t exec rofi -show run
 bindsym $mod+Home exec jgmenu
 bindsym $mod+c exec clipmenu
 bindsym $mod+Shift+t exec tilix 
-exec mullvad-vpn
 exec /usr/bin/lxpolkit  
 exec compton -b 
 exec ~/.fehbg 
 exec dunst 
 exec clipmenud 
-exec light -S 0.00
+exec light -S 10.00
